Fix front panel image on mobile

--- a/public/theme/limservice/src/scss/components/_front-panel.scss
+++ b/public/theme/limservice/src/scss/components/_front-panel.scss
@@ -92,9 +92,15 @@
     z-index: -1;
     top: 0;
     left: 0;
-    height: 100%;
+    min-height: 100%;
+    min-width: 100%;
+    height: auto;
     width: auto;
     max-width: none;
+
+    @include breakpoint(small down) {
+
+    }
 }
 
 .front-panel__image--center {
@@ -183,9 +189,15 @@
 }
 
 .front-panel__link--mobile {
+    display: none;
+
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
+
+    @include breakpoint(small down) {
+        display: block;
+    }
 }
